src/parsing/HoocParser.cpp

// Generated from Hooc.g4 by ANTLR 4.13.2


#include "HoocListener.h"
#include "HoocVisitor.h"

#include "HoocParser.h"


using namespace antlrcpp;
using namespace hooc;

using namespace antlr4;

namespace {

struct HoocParserStaticData final {
  HoocParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  HoocParserStaticData(const HoocParserStaticData&) = delete;
  HoocParserStaticData(HoocParserStaticData&&) = delete;
  HoocParserStaticData& operator=(const HoocParserStaticData&) = delete;
  HoocParserStaticData& operator=(HoocParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag hoocParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<HoocParserStaticData> hoocParserStaticData = nullptr;

void hoocParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (hoocParserStaticData != nullptr) {
    return;
  }
#else
  assert(hoocParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<HoocParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "importStatement", "modulePath", "qualifiedIdentifier", 
      "importItem", "declaration", "functionDeclaration", "parameterList", 
      "parameter", "classDeclaration", "classModifier", "classBody", "classMember", 
      "constructorDeclaration", "functionModifier", "variableDeclaration", 
      "constantDeclaration", "type", "optionalType", "arrayType", "baseType", 
      "mapType", "mapKeyType", "primitiveType", "ffiDeclaration", "ffiImportDeclaration", 
      "ffiLinkDeclaration", "ffiNativeFunction", "ffiNativeDeclaration", 
      "ffiParameterList", "ffiParameter", "ffiType", "librarySearchPaths", 
      "versionRange", "statement", "tryCatchStatement", "throwStatement", 
      "block", "variableDeclarationStatement", "expressionStatement", "ifStatement", 
      "forStatement", "whileStatement", "returnStatement", "scopeStatement", 
      "breakStatement", "continueStatement", "expression", "assignmentExpression", 
      "compoundAssignment", "logicalOrExpression", "logicalAndExpression", 
      "relationalExpression", "additiveExpression", "multiplicativeExpression", 
      "unaryExpression", "postfixExpression", "postfixSuffix", "augmentedAssignment", 
      "primary", "newExpression", "interpolatedString", "argumentList", 
      "expressionList"
    },
    std::vector<std::string>{
      "", "'func'", "'public'", "'private'", "'async'", "'return'", "'if'", 
      "'else'", "'for'", "'while'", "'in'", "'break'", "'continue'", "'class'", 
      "'extends'", "'import'", "'from'", "'new'", "'var'", "'const'", "'scope'", 
      "'final'", "'singleton'", "'immutable'", "'factory'", "'observable'", 
      "'constructor'", "'service'", "'strategy'", "'actor'", "'__hoo_init'", 
      "'as'", "'by'", "'this'", "'true'", "'false'", "'null'", "'try'", 
      "'catch'", "'finally'", "'throw'", "'rethrow'", "'map'", "'function'", 
      "'native'", "'extern'", "'pointer'", "'array'", "'at'", "'library'", 
      "'link'", "'dynamic'", "'int8'", "'byte'", "'int64'", "'float'", "'double'", 
      "'f64'", "'bool'", "'char'", "'string'", "'void'", "'+'", "'-'", "'*'", 
      "'/'", "'%'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'<<='", 
      "'>>='", "'++'", "'--'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
      "'&&'", "'||'", "'!'", "'\\u003F'", "'->'", "'..'", "';'", "','", 
      "'.'", "':'", "'('", "')'", "'{'", "'}'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "FUNC", "PUBLIC", "PRIVATE", "ASYNC", "RETURN", "IF", "ELSE", 
      "FOR", "WHILE", "IN", "BREAK", "CONTINUE", "CLASS", "EXTENDS", "IMPORT", 
      "FROM", "NEW", "VAR", "CONST", "SCOPE", "FINAL", "SINGLETON", "IMMUTABLE", 
      "FACTORY", "OBSERVABLE", "CONSTRUCTOR", "SERVICE", "STRATEGY", "ACTOR", 
      "HOO_INIT", "AS", "BY", "THIS", "TRUE", "FALSE", "NULL", "TRY", "CATCH", 
      "FINALLY", "THROW", "RETHROW", "MAP", "FUNCTION", "NATIVE", "EXTERN", 
      "POINTER", "ARRAY", "AT", "LIBRARY", "LINK", "DYNAMIC", "INT8", "BYTE", 
      "INT64", "FLOAT", "DOUBLE", "F64", "BOOL", "CHAR", "STRING", "VOID", 
      "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "ASSIGN", "COMPOUND_PLUS", 
      "COMPOUND_MINUS", "COMPOUND_MULTIPLY", "COMPOUND_DIVIDE", "COMPOUND_MODULO", 
      "COMPOUND_LEFT_SHIFT", "COMPOUND_RIGHT_SHIFT", "INCREMENT", "DECREMENT", 
      "EQUALS", "NOT_EQUALS", "LESS", "LESS_EQUALS", "GREATER", "GREATER_EQUALS", 
      "AND", "OR", "NOT", "QUESTION", "ARROW", "RANGE", "SEMICOLON", "COMMA", 
      "DOT", "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
      "RBRACKET", "MULTILINE_STRING", "STRING_LITERAL", "CHAR_LITERAL", 
      "INTEGER_LITERAL", "FLOATING_LITERAL", "IDENTIFIER", "WS", "SINGLE_LINE_COMMENT", 
      "MULTI_LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  hoocParserStaticData = std::move(staticData);
}

}

HoocParser::HoocParser(TokenStream *input) : HoocParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

HoocParser::HoocParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  HoocParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *hoocParserStaticData->atn, hoocParserStaticData->decisionToDFA, hoocParserStaticData->sharedContextCache, options);
}

HoocParser::~HoocParser() {
  delete _interpreter;
}

const atn::ATN& HoocParser::getATN() const {
  return *hoocParserStaticData->atn;
}

std::string HoocParser::getGrammarFileName() const {
  return "Hooc.g4";
}

const std::vector<std::string>& HoocParser::getRuleNames() const {
  return hoocParserStaticData->ruleNames;
}

const dfa::Vocabulary& HoocParser::getVocabulary() const {
  return hoocParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView HoocParser::getSerializedATN() const {
  return hoocParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

HoocParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HoocParser::CompilationUnitContext::EOF() {
  return getToken(HoocParser::EOF, 0);
}

std::vector<HoocParser::ImportStatementContext *> HoocParser::CompilationUnitContext::importStatement() {
  return getRuleContexts<HoocParser::ImportStatementContext>();
}

HoocParser::ImportStatementContext* HoocParser::CompilationUnitContext::importStatement(size_t i) {
  return getRuleContext<HoocParser::ImportStatementContext>(i);
}

std::vector<HoocParser::FfiDeclarationContext *> HoocParser::CompilationUnitContext::ffiDeclaration() {
  return getRuleContexts<HoocParser::FfiDeclarationContext>();
}

HoocParser::FfiDeclarationContext* HoocParser::CompilationUnitContext::ffiDeclaration(size_t i) {
  return getRuleContext<HoocParser::FfiDeclarationContext>(i);
}

std::vector<HoocParser::DeclarationContext *> HoocParser::CompilationUnitContext::declaration() {
  return getRuleContexts<HoocParser::DeclarationContext>();
}

HoocParser::DeclarationContext* HoocParser::CompilationUnitContext::declaration(size_t i) {
  return getRuleContext<HoocParser::DeclarationContext>(i);
}

std::vector<tree::TerminalNode *> HoocParser::CompilationUnitContext::SEMICOLON() {
  return getTokens(HoocParser::SEMICOLON);
}

tree::TerminalNode* HoocParser::CompilationUnitContext::SEMICOLON(size_t i) {
  return getToken(HoocParser::SEMICOLON, i);
}


size_t HoocParser::CompilationUnitContext::getRuleIndex() const {
  return HoocParser::RuleCompilationUnit;
}

void HoocParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void HoocParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}


std::any HoocParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HoocVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

HoocParser::CompilationUnitContext* HoocParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, HoocParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HoocParser::IMPORT

    || _la == HoocParser::FROM) {
      setState(128);
      importStatement();
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(141);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1741627423727618) != 0)) {
      setState(139);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case HoocParser::FUNC:
        case HoocParser::CLASS:
        case HoocParser::VAR:
        case HoocParser::CONST:
        case HoocParser::FINAL:
        case HoocParser::SINGLETON:
        case HoocParser::IMMUTABLE:
        case HoocParser::FACTORY:
        case HoocParser::OBSERVABLE:
        case HoocParser::SERVICE:
        case HoocParser::STRATEGY:
        case HoocParser::ACTOR: {
          setState(134);
          declaration();
          setState(136);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == HoocParser::SEMICOLON) {
            setState(135);
            match(HoocParser::SEMICOLON);
          }
          break;
        }

        case HoocParser::NATIVE:
        case HoocParser::EXTERN:
        case HoocParser::LIBRARY:
        case HoocParser::LINK: {
          setState(138);
          ffiDeclaration();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(143);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(144);
    match(HoocParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStatementContext ------------------------------------------------------------------

HoocParser::ImportStatementContext::ImportStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HoocParser::ImportStatementContext::getRuleIndex() const {
  return HoocParser::RuleImportStatement;
}

void HoocParser::ImportStatementContext::copyFrom(ImportStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FromImportContext ------------------------------------------------------------------

tree::TerminalNode* HoocParser::FromImportContext::FROM() {
  return getToken(HoocParser::FROM, 0);
}

HoocParser::ModulePathContext* HoocParser::FromImportContext::modulePath() {
  return getRuleContext<HoocParser::ModulePathContext>(0);
}

tree::TerminalNode* HoocParser::FromImportContext::IMPORT() {
  return getToken(HoocParser::IMPORT, 0);
}

std::vector<HoocParser::ImportItemContext *> HoocParser::FromImportContext::importItem() {
  return getRuleContexts<HoocParser::ImportItemContext>();
}

HoocParser::ImportItemContext* HoocParser::FromImportContext::importItem(size_t i) {
  return getRuleContext<HoocParser::ImportItemContext>(i);
}

tree::TerminalNode* HoocParser::FromImportContext::SEMICOLON() {
  return getToken(HoocParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> HoocParser::FromImportContext::COMMA() {
  return getTokens(HoocParser::COMMA);
}

tree::TerminalNode* HoocParser::FromImportContext::COMMA(size_t i) {
  return getToken(HoocParser::COMMA, i);
}

HoocParser::FromImportContext::FromImportContext(ImportStatementContext *ctx) { copyFrom(ctx); }

void HoocParser::FromImportContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFromImport(this);
}
void HoocParser::FromImportContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFromImport(this);
}

std::any HoocParser::FromImportContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HoocVisitor*>(visitor))
    return parserVisitor->visitFromImport(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BasicImportContext ------------------------------------------------------------------

tree::TerminalNode* HoocParser::BasicImportContext::IMPORT() {
  return getToken(HoocParser::IMPORT, 0);
}

HoocParser::ModulePathContext* HoocParser::BasicImportContext::modulePath() {
  return getRuleContext<HoocParser::ModulePathContext>(0);
}

tree::TerminalNode* HoocParser::BasicImportContext::SEMICOLON() {
  return getToken(HoocParser::SEMICOLON, 0);
}

tree::TerminalNode* HoocParser::BasicImportContext::AS() {
  return getToken(HoocParser::AS, 0);
}

tree::TerminalNode* HoocParser::BasicImportContext::IDENTIFIER() {
  return getToken(HoocParser::IDENTIFIER, 0);
}

HoocParser::BasicImportContext::BasicImportContext(ImportStatementContext *ctx) { copyFrom(ctx); }

void HoocParser::BasicImportContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBasicImport(this);
}
void HoocParser::BasicImportContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBasicImport(this);
}

std::any HoocParser::BasicImportContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HoocVisitor*>(visitor))
    return parserVisitor->visitBasicImport(this);
  else
    return visitor->visitChildren(this);
}
HoocParser::ImportStatementContext* HoocParser::importStatement() {
  ImportStatementContext *_localctx = _tracker.createInstance<ImportStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, HoocParser::RuleImportStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(167);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HoocParser::IMPORT: {
        _localctx = _tracker.createInstance<HoocParser::BasicImportContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(146);
        match(HoocParser::IMPORT);
        setState(147);
        modulePath();
        setState(150);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == HoocParser::AS) {
          setState(148);
          match(HoocParser::AS);
          setState(149);
          match(HoocParser::IDENTIFIER);
        }
        setState(152);
        match(HoocParser::SEMICOLON);
        break;
      }

      case HoocParser::FROM: {
        _localctx = _tracker.createInstance<HoocParser::FromImportContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(154);
        match(HoocParser::FROM);
        setState(155);
        modulePath();
        setState(156);
        match(HoocParser::IMPORT);
        setState(157);
        importItem();
        setState(162);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == HoocParser::COMMA) {
          setState(158);
          match(HoocParser::COMMA);
          setState(159);
          importItem();
          setState(164);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(165);
        match(HoocParser::SEMICOLON);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModulePathContext ------------------------------------------------------------------

HoocParser::ModulePathContext::ModulePathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HoocParser::ModulePathContext::IDENTIFIER() {
  return getTokens(HoocParser::IDENTIFIER);
}

tree::TerminalNode* HoocParser::ModulePathContext::IDENTIFIER(size_t i) {
  return getToken(HoocParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> HoocParser::ModulePathContext::DOT() {
  return getTokens(HoocParser::DOT);
}

tree::TerminalNode* HoocParser::ModulePathContext::DOT(size_t i) {
  return getToken(HoocParser::DOT, i);
}


size_t HoocParser::ModulePathContext::getRuleIndex() const {
  return HoocParser::RuleModulePath;
}

void HoocParser::ModulePathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModulePath(this);
}

void HoocParser::ModulePathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModulePath(this);
}


std::any HoocParser::ModulePathContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HoocVisitor*>(visitor))
    return parserVisitor->visitModulePath(this);
  else
    return visitor->visitChildren(this);
}

HoocParser::ModulePathContext* HoocParser::modulePath() {
  ModulePathContext *_localctx = _tracker.createInstance<ModulePathContext>(_ctx, getState());
  enterRule(_localctx, 4, HoocParser::RuleModulePath);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(169);
    match(HoocParser::IDENTIFIER);
    setState(174);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HoocParser::DOT) {
      setState(170);
      match(HoocParser::DOT);
      setState(171);
      match(HoocParser::IDENTIFIER);
      setState(176);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifiedIdentifierContext ------------------------------------------------------------------

HoocParser::QualifiedIdentifierContext::QualifiedIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HoocParser::QualifiedIdentifierContext::IDENTIFIER() {
  return getTokens(HoocParser::IDENTIFIER);
}

tree::TerminalNode* HoocParser::QualifiedIdentifierContext::IDENTIFIER(size_t i) {
  return getToken(HoocParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> HoocParser::QualifiedIdentifierContext::DOT() {
  return getTokens(HoocParser::DOT);
}

tree::TerminalNode* HoocParser::QualifiedIdentifierContext::DOT(size_t i) {
  return getToken(HoocParser::DOT, i);
}


size_t HoocParser::QualifiedIdentifierContext::getRuleIndex() const {
  return HoocParser::RuleQualifiedIdentifier;
}

void HoocParser::QualifiedIdentifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQualifiedIdentifier(this);
}

void HoocParser::QualifiedIdentifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HoocListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQualifiedIdentifier(this);
}


std::any HoocParser::QualifiedIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HoocVisitor*>(visitor))
    return parserVisitor->visitQualifiedIdentifier(this);
  else
    return visitor->visitChildren(this);
}

HoocParser::QualifiedIdentifierContext* HoocParser::qualifiedIdentifier() {
  QualifiedIdentifierContext *_localctx = _tracker.createInstance<QualifiedIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 6, HoocParser::RuleQualifiedIdentifier);
  size_t _la = 0;
